# stratta

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/: copilot-instructions.md
app/: CMakeLists.txt
app/main/: main.cpp
app/mainwindow/: mainwindow.cpp  mainwindow.h
app/mainwindow/viewport/: UsdViewport.cpp  UsdViewport.h
app/showcase/: showcase.qrc
app/showcase/themes/: dark-theme.json
app/tests/: test_main.cpp
cmake/: AddGitSubmodule.cmake
